--- a/_textos-css-tutorial/12-css-text-color.html
+++ b/_textos-css-tutorial/12-css-text-color.html
@@ -17,7 +17,8 @@
 <body>
     <div id="link">
         <div id="explicacao">
-            
+            <h1>CSS Text</h1>
+            <h2>CSS Text</h2>
         </div>
     </div>
 </body>
