--- a/_textos-css-tutorial/5-css-background-attachment.html
+++ b/_textos-css-tutorial/5-css-background-attachment.html
@@ -42,8 +42,9 @@
     <div id="chuchu">
         <div id="chave">
             <div id="explicacao">
-                <h1>CSS background-attachment</h1>
-                <p>Em alguns casos você pode querer que uma imagem acompanhe <br/>a sua scrollagem ou que ela fique lá onde estava, para mexer nisso você <br/> deve usar "background-attachment".</p>
+                <h1>CSS Background Attachment</h1>
+                <h2>CSS background-attachment</h2>
+                <p>Em alguns casos você pode querer que uma imagem acompanhe <br/>a sua scrollagem ou que ela fique lá onde estava, para mexer nisso<br/> você deve usar "background-attachment".</p>
                 <p>Quando você coloca "background-attachment: fixed;" <br/>a imagem fica como o Link.</p>
                 <p>Quando você coloca "background-attachment: <br/>scroll;" a imagem fica como o Chuchu e a chave.</p>
                 <br/>
