--- a/_textos-css-tutorial/5-css-background-image-repeat.html
+++ b/_textos-css-tutorial/5-css-background-image-repeat.html
@@ -11,7 +11,8 @@
 <body>
     <div id="link">
         <div id="explicacao">
-            <h1>CSS background-repeat</h1>
+            <h1>CSS Background Image Repeat</h1>
+            <h2>CSS background-repeat</h2>
             <p>Por padrão, caso a imagem colocada como fundo não consiga ocupa-lo por completo, ela irá repetir a imagem verticalmente e horizontalmente para que ocupe.</p>
             <div style="background-image: url(../_imagens/fundo.jpg)">
                 <br/>
