--- a/_textos-css-tutorial/6-css-border-color.html
+++ b/_textos-css-tutorial/6-css-border-color.html
@@ -8,41 +8,41 @@
     <link rel="stylesheet" href="../_css/geral-link.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
-        h2 {
+        h3 {
             text-align: center;
             padding: 5px;
         }
 
-        h2#um {
+        h3#um {
             border-style: dashed;
             border-width: 10px;
             border-color: orange;
         }
 
-        h2#dois {
+        h3#dois {
             border-style: dotted;
             border-width: 10px;
             border-color: orangered;
         }
 
-        h2#tres {
+        h3#tres {
             border-style: solid;
             border-width: 10px;
         }
 
-        h2#quatro{
+        h3#quatro{
             border-style: dotted;
             border-width: 10px;
             border-color: palegoldenrod palegreen paleturquoise palevioletred;
         }
 
-        h2#cinco {
+        h3#cinco {
             border-style: solid;
             border-width: 10px;
             border-color: lightblue lightcoral lightcyan lightgoldenrodyellow;
         }
 
-        h2#seis {
+        h3#seis {
             border-style: solid;
             border-width: 10px;
             border-color: transparent lightcoral lightcyan lightgoldenrodyellow;
@@ -53,19 +53,20 @@
     <div id="link">
         <div id="explicacao">
             <h1>CSS Border Color</h1>
+            <h2>CSS Border Color</h2>
             <p>Para definir a cor de uma borda use: "border-color: ;".</p>
             <p>Você pode selecionar utilizando todos os tipos de definição de cores que você viu até agora e também pode colocar a borda como transparente.</p>
             <p>Se você não selecionar uma cor, ele vai pegar a cor do elemento.</p>
-            <h2 id="um">Texto</h2>
-            <h2 id="dois">Texto</h2>
-            <h2 id="tres" style=" color:steelblue">Não escolhi a cor da borda, logo, ele pegou a do texto.</h2>
-            <h1>CSS Specific Side Colors</h1>
+            <h3 id="um">Texto</h3>
+            <h3 id="dois">Texto</h3>
+            <h3 id="tres" style=" color:steelblue">Não escolhi a cor da borda, logo, ele pegou a do texto.</h3>
+            <h2>CSS Specific Side Colors</h2>
             <p>Para definir a cor de carda lado da borda coloque os valores no sentido horário (cima, direita, baixo, esquerda) usando o "border-color: ;".</p>
-            <h2 id="quatro">Texto</h2>
-            <h2 id="cinco">Texto</h2>
-            <h2 id="seis">Texto</h2>
+            <h3 id="quatro">Texto</h3>
+            <h3 id="cinco">Texto</h3>
+            <h3 id="seis">Texto</h3>
             <p>Aparentemente as bordas do lado direito e esquerdo são um trapézio.</p>
-            <h1>Regra geral:</h1>
+            <h2>Regra geral:</h2>
             <ul type="circle">
                 <li>Se tiver 4 valores 	&rarr; cima, direita, baixo, esquerda;</li>
                 <li>Se tiver 3 valores 	&rarr; cima, direita e esquerda, baixo;</li>
