--- a/_textos-css-tutorial/6-css-border-width.html
+++ b/_textos-css-tutorial/6-css-border-width.html
@@ -8,51 +8,47 @@
     <link rel="stylesheet" href="../_css/geral-link.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
-        h2 {
+        h3 {
             padding: 5px;
             text-align: center;
         }
-        h2#um {
+
+        h3#um {
             border-style: solid;
             border-width: 10px;
         }
         
-        h2#dois {
+        h3#dois {
             border-style: double;
             border-width: thick;
         }
 
-        h2#tres {
+        h3#tres {
             border-style: dashed;
             border-width: 8pt;
         }
 
-        h2#quatro {
+        h3#quatro {
             border-style: dashed;
             border-width: medium;
         }
 
-        h2 {
-            padding: 5px;
-            text-align: center;
-        }
-
-        h2#cinco {
+        h3#cinco {
             border-style: solid;
             border-width: 10px 5px 10px 5px;
         }
         
-        h2#seis {
+        h3#seis {
             border-style: double;
             border-width: 4px 4px 2px 2px;
         }
 
-        h2#sete {
+        h3#sete {
             border-style: dashed;
             border-width: 5pt 10pt 5pt 10pt;
         }
 
-        h2#oito {
+        h3#oito {
             border-style: dashed;
             border-width: 20pt 10pt;
         }
@@ -62,22 +58,23 @@
     <div id="link">
         <div id="explicacao">
             <h1>CSS Border Width</h1>
+            <h2>CSS Border Width</h2>
             <p>Você pode alterar a largura da borda usando "border-width: ;".</p>
             <p>Para isso você pode colocar os valores em in, px, pt, cm, em, etc.</p>
             <p>Além dos valores citados anteriormente, você pode colocar alguns já predeterminados, esses são: thin, medium and thick.</p>
-            <h2 id="um">10px</h2>
-            <h2 id="dois">thick</h2>
-            <h2 id="tres">8pt</h2>
-            <h2 id="quatro">medium</h2>
+            <h3 id="um">10px</h3>
+            <h3 id="dois">thick</h3>
+            <h3 id="tres">8pt</h3>
+            <h3 id="quatro">medium</h3>
 
-            <h1>Specific Side Widths</h1>
+            <h2>Specific Side Widths</h2>
             <p>Para definir a largura de cada borda coloque os valores no sentido horário (cima, direita, baixo, esquerda) usando o "border-width: ;".</p>
             <p>Se você colocar somente dois valores, ele vai entender como o primeiro sendo para o topo e para baixo e o segundo como para a esquerda e para a direita.</p>
-            <h2 id="cinco">Texto</h2>
-            <h2 id="seis">Texto</h2>
-            <h2 id="sete">Texto</h2>
-            <h2 id="oito">Texto</h2>
-            <h1>Regra geral:</h1>
+            <h3 id="cinco">Texto</h3>
+            <h3 id="seis">Texto</h3>
+            <h3 id="sete">Texto</h3>
+            <h3 id="oito">Texto</h3>
+            <h2>Regra geral:</h2>
             <ul type="circle">
                 <li>Se tiver 4 valores 	&rarr; cima, direita, baixo, esquerda;</li>
                 <li>Se tiver 3 valores 	&rarr; cima, direita e esquerda, baixo;</li>
