--- a/_textos-css-tutorial/6-css-borders.html
+++ b/_textos-css-tutorial/6-css-borders.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../_css/geral-link.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
-        h2 {
+        h3 {
             padding: 5px;
             text-align: center;
         }
@@ -18,27 +18,28 @@
             color: midnightblue;
         }
 
-        h2.dotted {border-style: dotted;}
-        h2.dashed {border-style: dashed;}
-        h2.solid {border-style: solid;}
-        h2.double {border-style: double;}
-        h2.groove {border-style: groove; border-color: orange; border-width: 10px;}
-        h2.ridge {border-style: ridge; border-color: orangered; border-width: 10px;}
-        h2.inset {border-style: inset; border-color: salmon; border-width: 10px;}
-        h2.outset {border-style: outset;  border-color: sandybrown; border-width: 10px;}
-        h2.none {border-style: none;}
-        h2.hidden {border-style: hidden;}
-        h2.mix {border-style: dotted dashed solid double;}
+        h3.dotted {border-style: dotted;}
+        h3.dashed {border-style: dashed;}
+        h3.solid {border-style: solid;}
+        h3.double {border-style: double;}
+        h3.groove {border-style: groove; border-color: orange; border-width: 10px;}
+        h3.ridge {border-style: ridge; border-color: orangered; border-width: 10px;}
+        h3.inset {border-style: inset; border-color: salmon; border-width: 10px;}
+        h3.outset {border-style: outset;  border-color: sandybrown; border-width: 10px;}
+        h3.none {border-style: none;}
+        h3.hidden {border-style: hidden;}
+        h3.mix {border-style: dotted dashed solid double;}
     </style> 
 </head>
 <body>
     <div id="link">
         <div id="explicacao">
             <h1>CSS Borders</h1>
+            <h2>CSS Borders</h2>
             <p>Você pode editar o estilo, a largura e a cor da borda de um elemento</p>
-            <h2 style="border: 2px solid black;">Eu tenho bordas em todos os lados</h2>
-            <h2 style="border-bottom: 2px solid orange; color: orange;">Eu tenho bordas somente embaixo</h2>
-            <h1>CSS Border Style</h1>
+            <h3 style="border: 2px solid black;">Eu tenho bordas em todos os lados</h3>
+            <h3 style="border-bottom: 2px solid orange; color: orange;">Eu tenho bordas somente embaixo</h3>
+            <h2>CSS Border Style</h2>
             <p>Você pode alterar o tipo de borda usando "border-style: ;"</p>
             <p>Se você não usar "border-style: ;" ou ao menos selecionar esse parâmetro, as outras formatações de borda não funcionarão.</p>
             <p>Você pode selecionar esses tipos de borda:</p>
@@ -55,17 +56,17 @@
                 <li><span>hidden</span> - Cria uma borda escondida. Não sei bem pra que serve.</li>
             </ul>
             <p>Veja os exemplos a seguir:</p>
-            <h2 class="dotted">A dotted border.</h2>
-            <h2 class="dashed">A dashed border.</h2>
-            <h2 class="solid">A solid border.</h2>
-            <h2 class="double">A double border.</h2>
-            <h2 class="groove">A groove border.</h2>
-            <h2 class="ridge">A ridge border.</h2>
-            <h2 class="inset">An inset border.</h2>
-            <h2 class="outset">An outset border.</h2>
-            <h2 class="none">No border.</h2>
-            <h2 class="hidden">A hidden border.</h2>
-            <h2 class="mix">A mixed border.</h2>
+            <h3 class="dotted">A dotted border.</h3>
+            <h3 class="dashed">A dashed border.</h3>
+            <h3 class="solid">A solid border.</h3>
+            <h3 class="double">A double border.</h3>
+            <h3 class="groove">A groove border.</h3>
+            <h3 class="ridge">A ridge border.</h3>
+            <h3 class="inset">An inset border.</h3>
+            <h3 class="outset">An outset border.</h3>
+            <h3 class="none">No border.</h3>
+            <h3 class="hidden">A hidden border.</h3>
+            <h3 class="mix">A mixed border.</h3>
         </div>
     </div>
 </body>
