--- a/_textos-css-tutorial/6-css-shorthand-border-property.html
+++ b/_textos-css-tutorial/6-css-shorthand-border-property.html
@@ -8,44 +8,44 @@
     <link rel="stylesheet" href="../_css/geral-link.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
-        h2#um {
+        h3 {
+            padding: 5px;
+            text-align: center;
+        }
+
+        h3#um {
             border: 5px solid steelblue;
         }
         
-        h2#dois {
+        h3#dois {
             border-top: 5px solid orangered;
         }
         
-        h2#tres {
+        h3#tres {
             border-bottom: 5px solid orangered;
         }
 
-        h2#quatro {
+        h3#quatro {
             border-left: 5px solid orangered;
         }
 
-        h2#cinco {
+        h3#cinco {
             border-right: 5px solid orangered;
-        }
-
-
-        h2 {
-            padding: 5px;
-            text-align: center;
         }
     </style>
 </head>
 <body>
     <div id="link">
         <div id="explicacao">
-            <h1>CSS Border - Shorthand Property</h1>
+            <h1>CSS Shorthand Border Property</h1>
+            <h2>CSS Border - Shorthand Property</h2>
             <p>Assim como o background, você pode encurtar o código usando "border: ;". Nela você sempre deve especificar o estilo da borda, caso contrário, não irá funcionar.</p>
-            <h2 id="um">border: 5px solid steelblue;</h2>
+            <h3 id="um">border: 5px solid steelblue;</h3>
             <p>Você também pode escolher só um lado, para isso adicione "-lado", exemplo: "border-bottom: ;".</p>
-            <h2 id="dois">Top</h2>
-            <h2 id="quatro">Left</h2>
-            <h2 id="cinco">Right</h2>
-            <h2 id="tres">Bottom</h2>
+            <h3 id="dois">Top</h3>
+            <h3 id="quatro">Left</h3>
+            <h3 id="cinco">Right</h3>
+            <h3 id="tres">Bottom</h3>
         </div>
     </div>
 </body>
