--- a/_textos-css-tutorial/10-css-box-model.html
+++ b/_textos-css-tutorial/10-css-box-model.html
@@ -27,7 +27,7 @@
             margin: 20px;
         }
 
-        h2#dois {
+        h3#dois {
             width: 80px;
             border: 10px solid steelblue;
             padding: 5px;
@@ -42,6 +42,7 @@
     <div id="link">
         <div id="explicacao">
             <h1>CSS Box Model</h1>
+            <h2>The CSS Box Model</h2>
             <p>O modelo de caixa é basicamente a caixa que fica ao redor de cada elemento html.</p>
             <p>Ela é formada de várias camadas, a mais externa é o margin, a seguinte é a border, logo depois o padding e por fim o conteúdo.</p>
             <p>A imagem a seguir define bem como é organizado:</p>
@@ -62,7 +63,7 @@
             <figure id="tres">
                 <img src="../_imagens/chapeu.png" alt=""/>
             </figure>
-            <h2 id="dois">110px</h2>
+            <h3 id="dois">110px</h3>
             <p>Os 110px vem do 80px de width + 10px da borda esquerda + 10px da borda direita + 5px do padding esquerdo + 5px do padding direito. A imagem tinha 100px, mas, o tamanho final dela ficou igual a 110px devido aos 5px da borda esquerda e 5px da borda direita.</p>
         </div>
     </div>
