--- a/_textos-css-tutorial/13-css-fonts.html
+++ b/_textos-css-tutorial/13-css-fonts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Text</title>
+    <title>CSS Fonts</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
@@ -43,7 +43,7 @@
         <div id="explicacao">
             <h1>CSS Fonts</h1>
             <p>É importante ter uma boa escolha de fonte e de suas propriedades como cor e tamanho.</p>
-            <h1>Generic Font Families and Commonly Used Font Fallbacks</h1>
+            <h2>Generic Font Families and Commonly Used Font Fallbacks</h2>
             <p>No CSS temos 5 famílias de fontes genéricas:</p>
             <ul type="circle">
                 <li><span>Serif</span> - As fontes terão um traço na borda de cada letra. Cria uma impressão de formalidade e elegância;</li>
@@ -53,14 +53,14 @@
                 <li><span>Fantasy</span> - As fontes irão ser criativas, "exóticas".</li>
             </ul>
             <p>Todas as outras fontes diferentes das que foram citas pertencem a uma dessas fontes genéricas.</p>
-            <h1>Difference Between Serif and Sans-serif Fonts</h1>
+            <h2>Difference Between Serif and Sans-serif Fonts</h2>
             <p class="one">Minha fonte é da família sans-serif!</p>
             <p class="two">Minha fonte é da família serif!</p>
             <p>Obs.: Nos computadores, as fontes serif são mais fáceis de ler.</p>
-            <h1>The CSS font-family Property</h1>
+            <h2>The CSS font-family Property</h2>
             <p>Para escolher a fonte use "font-family: ;". Comece colocando a fonte que deseja e em seguida coloque uma fonte de família genérica, para o caso do navegador não ter a que você selecionou. Aparentemente essa precaução de ter dar ao navegador opções de fontes para usar é chamada de "fallback".</p>
             <p>Obs.: Se o nome da fonte for maior que uma palavra, coloque-a entre aspas simples.</p>
-            <h1>Some Font Examples</h1>
+            <h2>Some Font Examples</h2>
             <div class="examples">
                 <p class="one">Minha fonte é da família sans-serif! E o nome de minha fonte é "Arial"!</p>
                 <p class="two">Minha fonte é da família serif! E o nome de minha fonte é "Times New Roman"!</p>
