--- a/_textos-css-tutorial/2-how-to-add-css.html
+++ b/_textos-css-tutorial/2-how-to-add-css.html
@@ -21,23 +21,24 @@
 <body>
     <div id="link">
         <div id="explicacao">
-            <h1>Nós temos 3 formas de adicionar CSS ao documento, essas são:</h1>
+            <h1>How to Add CSS</h1>
+            <h2>Nós temos 3 formas de adicionar CSS ao documento, essas são:</h2>
             <ul>
                 <li>External CSS</li>
                 <li>Internal CSS</li>
                 <li>Inline CSS</li>
             </ul>
-            <h1>External CSS</h1>
+            <h2>External CSS</h2>
             <p>Serve para quando você já tem um CSS pronto que vai servir para várias páginas, ele ficará fora do documento, num arquivo a parte. Para usá-lo link o seu arquivo HTML ao do CSS colocando dentro da tag: link rel="stylesheet" href="caminho-onde-esta-o-arquivo-css".</p>
             <p>O text-indent, o tamanho das letras, a cor de fundo e a font-family foram definidas num arquivo fora daqui. Lá não terão tags, somente seletores e blocos de declaração</p>
-            <h1>Internal CSS</h1>
+            <h2>Internal CSS</h2>
             <p>Nesse caso a formatação fica dentro da tag style que fica dentro da tag head. Eu mudei os símbolos das listas dentro desse documento.</p>
-            <h1>Inline CSS</h1>
+            <h2>Inline CSS</h2>
             <p>Nesse caso você vai colocar uma formatação para uma tag <span style="color: royalblue;">específica</span> usando o parâmetro <span style="font-weight: bold;">style</span> dentro da tag.</p>
-            <h1>Multiple Style Sheets</h1>
+            <h2>Multiple Style Sheets</h2>
             <p>Em alguns casos você pode acabar formatando um mesmo elemento do seu documento internamente e externamente. A ordem de sobreposição depende de quem você colocou para vir primeiro lá no head, se você linkou o documento ao stylesheet externo antes de fazer seu CSS interno, o que irá se sobrepor é o que veio depois, no caso, o seu CSS interno. Se fizer o contrário, o CSS externo irá sobrepor.</p>
             <p>Nesse documento eu coloquei o link primeiro, logo, o tamanho das letras do parágrafo são iguais aos que coloquei no CSS interno.</p>
-            <h1>Cascading Order</h1>
+            <h2>Cascading Order</h2>
             <p>Caso tenham muitos estilos para um elemento html, a ordem a seguir será seguida:</p>
             <ol type="1">
                 <li>Inline style (inside an HTML element)</li>
