--- a/_textos-css-tutorial/4-css-colors-hex.html
+++ b/_textos-css-tutorial/4-css-colors-hex.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Hex Colors</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
-        h2 {
+        h3 {
             text-align: center; 
             padding: 5px;
         }
@@ -17,23 +17,24 @@
 <body>
     <div id="link">
         <div id="explicacao">
-            <h1>HEX</h1>
+            <h1>CSS Hex Colors</h1>
+            <h2>HEX Value</h2>
             <p>HEX vem de hexadecimal e tem como padrão: #RRGGBB RR(Red) GG(Green) BB(Blue)</p>
             <p>Os valores são entre 00 e ff que é o mesmo que 0 a 255, logo, se você colocar #ff0000 como cor, aparecerá vermelho.</p>
             <p>Para mostrar preto coloque todos os valores iguais a 0.</p>
             <p>Para mostrar preto coloque todos os valores iguais a ff.</p>
-            <h2 style="background-color:#ff0000;">#ff0000</h2>
-            <h2 style="background-color:#0000ff;">#0000ff</h2>
-            <h2 style="background-color:#ffa500;">#ffa500</h2>
+            <h3 style="background-color:#ff0000;">#ff0000</h3>
+            <h3 style="background-color:#0000ff;">#0000ff</h3>
+            <h3 style="background-color:#ffa500;">#ffa500</h3>
             <p>Os tons de cinza também podem ser definidos aqui utilizando o mesmo valor para as 3 variáveis.</p>
-            <h2 style="background-color:#3c3c3c;">#3c3c3c</h2>
-            <h2 style="background-color:#616161;">#616161</h2>
-            <h2 style="background-color:#787878;">#787878</h2>
-            <h2 style="background-color:#b4b4b4;">#b4b4b4</h2>
-            <h2 style="background-color:#f0f0f0;">#f0f0f0</h2>
+            <h3 style="background-color:#3c3c3c;">#3c3c3c</h3>
+            <h3 style="background-color:#616161;">#616161</h3>
+            <h3 style="background-color:#787878;">#787878</h3>
+            <h3 style="background-color:#b4b4b4;">#b4b4b4</h3>
+            <h3 style="background-color:#f0f0f0;">#f0f0f0</h3>
             <p>Em alguns casos você verá esse código ser encurtado para 3 dígitos, isso só ocorre quando os valores estão em pares, tipo: #00ffcc, pode ser escrito como #0fc.</p>
-            <h2 style="background-color:#b58;">#b58 = #bb5588</h2>
-            <h2 style="background-color:#fc9;">#fc9 = #ffcc99</h2>
+            <h3 style="background-color:#b58;">#b58 = #bb5588</h3>
+            <h3 style="background-color:#fc9;">#fc9 = #ffcc99</h3>
         </div>
     </div>
 </body>
