--- a/_textos-css-tutorial/4-css-colors.html
+++ b/_textos-css-tutorial/4-css-colors.html
@@ -11,15 +11,16 @@
 <body>
     <div id="link">
         <div id="explicacao">
-            <p>As cores podem ser especificadas usando o seu nome ou valores RGB, HEX, HSL, RGBA e HSLA.</p>
             <h1>CSS Colors</h1>
+            <p>As cores podem ser especificadas usando o seu nome ou valores RGB, HEX, HSL, RGBA e HSLA.</p>
+            <h2>CSS Colors Names</h2>
             <p>Você pode só digitar o nome da cor nos parâmetros. O HTML e CSS suportam 140 padrões de cores.</p>
             <h1 style="background-color:Tomato; text-align:center; padding: 5px;">Tomato</h1>
             <h1 style="background-color:Orange; text-align:center; padding: 5px;">Orange</h1>
             <h1 style="background-color:DodgerBlue; text-align:center; padding: 5px;">DodgerBlue</h1>
             <h1 style="background-color:MediumSeaGreen; text-align:center; padding: 5px;">MediumSeaGreen</h1>
             
-            <h1>CSS Background Color</h1>
+            <h2>CSS Background Color</h2>
             <p>Você pode escolher a cor de fundo usando "background-color".</p>
             <h1 style="background-color:DodgerBlue; text-align:center; padding: 5px;">Hello World</h1>
             <p style="background-color:Tomato; padding: 5px;">
@@ -27,19 +28,19 @@
             Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
             </p>
 
-            <h1>CSS Text Color</h1>
+            <h2>CSS Text Color</h2>
             <p>Você também pode mudar as cores do texto usando "color"</p>
             <h3 style="color:Tomato;">Hello World</h3>
             <p style="color:DodgerBlue;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
             <p style="color:MediumSeaGreen;">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
 
-            <h1>CSS Border Color</h1>
+            <h2>CSS Border Color</h2>
             <p>Você também pode mudar as cores de bordas digitando a cor como último valor.</p>
             <h1 style="border: 2px solid Tomato; text-align: center;">Hello World</h1>
             <h1 style="border: 2px solid DodgerBlue; text-align: center;">Hello World</h1>
             <h1 style="border: 2px solid Violet; text-align: center;">Hello World</h1>
 
-            <h1>CSS Color Values</h1>
+            <h2>CSS Color Values</h2>
             <p>Você pode selecionar um mesmo tipo de cor de várias formas.</p>
             <p>Mesma cor que "tomato":</p>
             <h1 style="background-color:rgb(255, 99, 71);text-align: center;">rgb(255, 99, 71)</h1>
