--- a/_textos-css-tutorial/5-css-background-shorthand.html
+++ b/_textos-css-tutorial/5-css-background-shorthand.html
@@ -28,11 +28,12 @@
     <div id="link">
         <div id="explicacao">
             <h1>CSS Background Shorthand</h1>
+            <h2>CSS background - Shorthand property</h2>
             <p>Você pode encurtar o código de background usando "background: 'cor url()' 'repeat or not' 'attachment' 'position'"</p>
             <p>Você não precisa selecionar todas aquelas opções, só siga a ordem.</p>
             <br/>
             <h1>Scrolle até o final!</h1>
-            <br/><br/><br/><br/><br/><br/><br/><br/>
+            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
             <div id="link2">
                 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
             </div>
