--- a/_textos-css-tutorial/5-css-backgrounds.html
+++ b/_textos-css-tutorial/5-css-backgrounds.html
@@ -11,7 +11,9 @@
 <body>
     <div id="link">
         <div id="explicacao">
-            <h1>background-color</h1>
+            <h1>CSS Backgrounds</h1>
+            <p>É possível fazer mudanças no fundo.</p>
+            <h2>CSS background-color</h2>
             <p>Usando background-color você muda o fundo de uma página.</p>
             <p>Exemplo: essa página tem essa cor porque tem isso na stylesheet: "background-color: azure;".</p>
             <p style="background-color: cadetblue">Esse parâmetro pode ser usado para qualquer elemento do HTML, esse aqui é um exemplo.</p>
