--- a/_textos-css-tutorial/6-css-rounded-borders.html
+++ b/_textos-css-tutorial/6-css-rounded-borders.html
@@ -8,26 +8,26 @@
     <link rel="stylesheet" href="../_css/geral-link.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
-        h2 {
+        h3 {
             padding: 5px;
             text-align: center;
         }
 
-        h2#um {
+        h3#um {
             border: 2px solid steelblue;
         }
 
-        h2#dois {
+        h3#dois {
             border: 2px solid steelblue;
             border-radius: 5px
         }
 
-        h2#tres {
+        h3#tres {
             border: 2px solid steelblue;
             border-radius: 8px
         }
 
-        h2#quatro {
+        h3#quatro {
             border: 2px solid steelblue;
             border-radius: 15px
         }
@@ -38,11 +38,12 @@
     <div id="link">
         <div id="explicacao">
             <h1>CSS Rounded Borders</h1>
+            <h2>CSS Rounded Borders</h2>
             <p>Para deixar as bordas redondas use: "border-radius: ;".</p>
-            <h2 id="um">Borda normal</h2>
-            <h2 id="dois">Borda arredondada</h2>
-            <h2 id="tres">Borda mais um pouco arredondada</h2>
-            <h2 id="quatro">Borda mais arredondada</h2>
+            <h3 id="um">Borda normal</h3>
+            <h3 id="dois">Borda arredondada</h3>
+            <h3 id="tres">Borda mais um pouco arredondada</h3>
+            <h3 id="quatro">Borda mais arredondada</h3>
         </div>
     </div>
 </body>
